--- a/public/wire.html
+++ b/public/wire.html
@@ -137,188 +137,198 @@
     }
     async function me(){ return fetch('/api/me', { credentials:'include', cache:'no-store' }); }
 
-    // ==== GIS (popup, no FedCM) ====
-    function initGis(){
-      if(!window.google || !google.accounts || !google.accounts.id){
-        setTimeout(initGis, 50);
-        return;
-      }
-      google.accounts.id.initialize({
-        client_id: WEB_CLIENT_ID,
-        callback: ({ credential }) => afterSignIn(credential),
-        ux_mode: 'popup',
-        auto_select: false,
-        use_fedcm_for_prompt: false
-      });
-      const btnHost = document.getElementById('g_id_signin');
-      if (btnHost) {
-        google.accounts.id.renderButton(btnHost, { theme: 'outline', size: 'large', text: 'signin_with' });
-      }
-      // No prompt() in popup mode
+  // ==== GIS (same as index.html: auto-select + prompt) ====
+  function initGis(){
+    if (!window.google || !google.accounts || !google.accounts.id){
+      setTimeout(initGis, 50);
+      return;
     }
+    google.accounts.id.initialize({
+      client_id: WEB_CLIENT_ID,
+      callback: ({ credential }) => afterSignIn(credential),
+      auto_select: true,
+      use_fedcm_for_prompt: true,
+      cancel_on_tap_outside: false
+    });
+    const btnHost = document.getElementById('g_id_signin');
+    if (btnHost) google.accounts.id.renderButton(btnHost, { theme:'outline', size:'large' });
+    google.accounts.id.prompt(); // ← important
+  }
 
-    async function afterSignIn(credential){
-      try{
-        // create server session cookie
-        const r = await fetch('/api/session', {
-          method:'POST',
-          headers:{'content-type':'application/json'},
-          credentials:'include',
-          cache:'no-store',
-          body: JSON.stringify({ credential })
-        });
-        if(!r.ok) throw new Error('session create failed');
-
-        // Give the browser a beat to persist the Set-Cookie
-        await sleep(150);
-
-        // Try to boot; retry once; then hard fallback to reload
-        if (!(await bootWithSession())) {
-          await sleep(300);
-          if (!(await bootWithSession())) location.reload();
-        }
-      }catch(e){
-        console.error(e);
-        setStatus('Sign-in failed. Please try again.');
-      }
-    }
-
-    // ==== data loaders ====
-    async function loadFundsWithInterest(){
-      const payload = await apiPost('/api/list-interests', { ...adminBody() }, adminHeaders());
-      const funds = (payload.funds||[]).filter(f => (typeof f.interestFrac==='number' ? f.interestFrac : 0) > 0);
-      return { funds, updated: payload.updated, email: payload.email, actingAs: payload.actingAs };
-    }
-    async function loadWireRows(){
-      const { wires, updated } = await apiPost('/api/list-wires', { ...adminBody() }, adminHeaders());
-      return { wires: Array.isArray(wires) ? wires : [], updated };
-    }
-
-    function masked(val, visible=false){
-      const s = String(val||'').replace(/\s/g,'').trim();
-      if (!s) return '';
-      if (visible) return String(val);
-      const last4 = s.slice(-4);
-      return '•'.repeat(Math.max(0, s.length - 4)) + last4;
-    }
-    function copyText(text){
-      navigator.clipboard?.writeText(String(text)).then(()=>{ setStatus('Copied'); setTimeout(()=>setStatus(''),1000); });
-    }
-    function mkRow(label, raw, sensitive=false){
-      const row = document.createElement('div'); row.className='rows';
-      const l = document.createElement('div'); l.className='label'; l.textContent = label;
-      const v = document.createElement('div'); v.className='value';
-      const btns = document.createElement('div'); btns.className='buttons';
-      let revealed = false;
-      const render = ()=> v.textContent = sensitive ? masked(raw, revealed) : (raw || '');
-      render();
-      if (raw && String(raw).trim()){
-        const copyBtn = document.createElement('button'); copyBtn.className='btn'; copyBtn.textContent='Copy';
-        copyBtn.addEventListener('click', ()=> copyText(raw)); btns.appendChild(copyBtn);
-        if (sensitive){
-          const tog = document.createElement('button'); tog.className='btn'; tog.textContent='Reveal';
-          tog.addEventListener('click', ()=>{ revealed = !revealed; tog.textContent = revealed ? 'Hide' : 'Reveal'; render(); });
-          btns.appendChild(tog);
-        }
-      } else {
-        v.innerHTML = '<span class="muted">—</span>';
-      }
-      row.appendChild(l); row.appendChild(v); row.appendChild(btns);
-      return row;
-    }
-
-    function renderBankCards(wires, memberFunds){
-      const host = document.getElementById('bankWrap'); host.innerHTML = '';
-      const byFund = new Map(); for (const f of memberFunds) byFund.set(norm(f), true);
-
-      const rows = wires.filter(r=>{
-        const shortName = norm(r['Entity Short Name'] || '');
-        const legalName = norm(r['Entity Legal Name'] || '');
-        return byFund.has(shortName) || byFund.has(legalName);
-      });
-
-      if (!rows.length){
-        const empty = document.createElement('div');
-        empty.className = 'card';
-        empty.innerHTML = '<div class="sub">No wire instructions are available for your current holdings.</div>';
-        host.appendChild(empty);
-        return;
-      }
-
-      const groups = new Map();
-      for (const r of rows){
-        const key = r['Entity Short Name'] || r['Entity Legal Name'] || 'Entity';
-        if (!groups.has(key)) groups.set(key, []);
-        groups.get(key).push(r);
-      }
-
-      for (const [entity, list] of groups){
-        for (const r of list){
-          const card = document.createElement('div'); card.className='bank-card';
-          card.innerHTML = `<h4>${safe(entity)}</h4>`;
-
-          const wrap = document.createElement('div'); wrap.className='rows';
-          wrap.appendChild(mkRow('Bank Name', r['Bank Name']));
-          wrap.appendChild(mkRow('Bank Address', r['Bank Address']));
-          wrap.appendChild(mkRow('Account Name', r['Entity Legal Name']));
-          wrap.appendChild(mkRow('Account Address', r['Account Address']));
-          wrap.appendChild(mkRow('Account Number', r['Account Number'], true));
-          wrap.appendChild(mkRow('Routing Number (WIRE)', r['Routing Number (WIRE)'], true));
-          wrap.appendChild(mkRow('Routing Number (ACH)', r['Routing Number (ACH)'], true));
-          wrap.appendChild(mkRow('SWIFT (international)', r['SWIFT (international)']));
-          wrap.appendChild(mkRow('Verbal confirmation - contact1', r['Verbal confirmation - contact1']));
-          wrap.appendChild(mkRow('Verbal confirmation - contact2', r['Verbal confirmation - contact2']));
-          card.appendChild(wrap);
-
-          host.appendChild(card);
-        }
-      }
-    }
-
-    function paintUser(user){
-      document.getElementById('signedAs').textContent = `Signed in as ${user?.email||''}`;
-      document.getElementById('kpi-name').textContent  = user?.name || '—';
-      document.getElementById('kpi-email').textContent = user?.email || '—';
-    }
-
-    async function loadAll(){
-      setStatus('Loading…');
-      const [{ funds, email, actingAs }, { wires }] = await Promise.all([ loadFundsWithInterest(), loadWireRows() ]);
-      const memberFunds = funds.map(f => f.fund || f.name || '');
-      document.getElementById('kpi-scope').textContent = memberFunds.length ? `${memberFunds.length} entit${memberFunds.length>1?'ies':'y'}` : '—';
-      document.getElementById('kpi-scope-sub').textContent = memberFunds.length ? 'Filtered by your GP Interests' : 'No active GP Interests found';
-      renderBankCards(wires || [], memberFunds);
-      if (actingAs && actingAs !== email){
-        document.getElementById('signedAs').textContent = `Acting as ${actingAs} (admin: ${email})`;
-      }
-      setStatus('');
-    }
-
-    async function bootWithSession(){
-      const r = await me();
+  async function waitForSession(timeoutMs = 5000){
+    const start = Date.now();
+    while (Date.now() - start < timeoutMs){
+      const r = await me();                 // GET /api/me
       if (r.ok){
-        const { user } = await r.json();
-        paintUser(user);
-        await loadAll();
-        return true;
+        try { return await r.json(); } catch { return { user:null }; }
       }
-      return false;
+      await sleep(150);
+    }
+    throw new Error('Session not ready');
+  }
+
+  async function afterSignIn(credential){
+    try{
+      // Create server session cookie
+      const r = await fetch('/api/session', {
+        method:'POST',
+        headers:{ 'content-type':'application/json' },
+        credentials:'include',
+        cache:'no-store',
+        body: JSON.stringify({ credential })
+      });
+      if (!r.ok) throw new Error('session create failed');
+
+      // Confirm cookie landed before loading data
+      const { user } = await waitForSession(5000);
+      if (user?.email){
+        document.getElementById('signedAs').textContent = `Signed in as ${user.email}`;
+        document.getElementById('kpi-name').textContent  = user.name || '—';
+        document.getElementById('kpi-email').textContent = user.email || '—';
+      }
+      await loadAll();
+    }catch(e){
+      console.error(e);
+      setStatus('Sign-in failed. Please try again.');
+    }
+  }
+
+  // ==== data loaders ====
+  async function loadFundsWithInterest(){
+    const payload = await apiPost('/api/list-interests', { ...adminBody() }, adminHeaders());
+    const funds = (payload.funds||[]).filter(f => (typeof f.interestFrac==='number' ? f.interestFrac : 0) > 0);
+    return { funds, updated: payload.updated, email: payload.email, actingAs: payload.actingAs };
+  }
+  async function loadWireRows(){
+    const { wires, updated } = await apiPost('/api/list-wires', { ...adminBody() }, adminHeaders());
+    return { wires: Array.isArray(wires) ? wires : [], updated };
+  }
+
+  function masked(val, visible=false){
+    const s = String(val||'').replace(/\s/g,'').trim();
+    if (!s) return '';
+    if (visible) return String(val);
+    const last4 = s.slice(-4);
+    return '•'.repeat(Math.max(0, s.length - 4)) + last4;
+  }
+  function copyText(text){
+    navigator.clipboard?.writeText(String(text)).then(()=>{ setStatus('Copied'); setTimeout(()=>setStatus(''),1000); });
+  }
+  function mkRow(label, raw, sensitive=false){
+    const row = document.createElement('div'); row.className='rows';
+    const l = document.createElement('div'); l.className='label'; l.textContent = label;
+    const v = document.createElement('div'); v.className='value';
+    const btns = document.createElement('div'); btns.className='buttons';
+    let revealed = false;
+    const render = ()=> v.textContent = sensitive ? masked(raw, revealed) : (raw || '');
+    render();
+    if (raw && String(raw).trim()){
+      const copyBtn = document.createElement('button'); copyBtn.className='btn'; copyBtn.textContent='Copy';
+      copyBtn.addEventListener('click', ()=> copyText(raw)); btns.appendChild(copyBtn);
+      if (sensitive){
+        const tog = document.createElement('button'); tog.className='btn'; tog.textContent='Reveal';
+        tog.addEventListener('click', ()=>{ revealed = !revealed; tog.textContent = revealed ? 'Hide' : 'Reveal'; render(); });
+        btns.appendChild(tog);
+      }
+    } else {
+      v.innerHTML = '<span class="muted">—</span>';
+    }
+    row.appendChild(l); row.appendChild(v); row.appendChild(btns);
+    return row;
+  }
+
+  function renderBankCards(wires, memberFunds){
+    const host = document.getElementById('bankWrap'); host.innerHTML = '';
+    const byFund = new Map(); for (const f of memberFunds) byFund.set(norm(f), true);
+
+    const rows = wires.filter(r=>{
+      const shortName = norm(r['Entity Short Name'] || '');
+      const legalName = norm(r['Entity Legal Name'] || '');
+      return byFund.has(shortName) || byFund.has(legalName);
+    });
+
+    if (!rows.length){
+      const empty = document.createElement('div');
+      empty.className = 'card';
+      empty.innerHTML = '<div class="sub">No wire instructions are available for your current holdings.</div>';
+      host.appendChild(empty);
+      return;
     }
 
-    // ==== start ====
-    (async function start(){
-      try{
-        // if a cookie already exists, use it; otherwise show the GIS button
-        if (await bootWithSession()) return;
-        await sleep(250);
-        if (await bootWithSession()) return;
-        setStatus('Session not ready');
-        initGis(); // render popup button
-      }catch(e){
-        console.error(e);
-        setStatus('Failed to load wire instructions');
+    const groups = new Map();
+    for (const r of rows){
+      const key = r['Entity Short Name'] || r['Entity Legal Name'] || 'Entity';
+      if (!groups.has(key)) groups.set(key, []);
+      groups.get(key).push(r);
+    }
+
+    for (const [entity, list] of groups){
+      for (const r of list){
+        const card = document.createElement('div'); card.className='bank-card';
+        card.innerHTML = `<h4>${safe(entity)}</h4>`;
+
+        const wrap = document.createElement('div'); wrap.className='rows';
+        wrap.appendChild(mkRow('Bank Name', r['Bank Name']));
+        wrap.appendChild(mkRow('Bank Address', r['Bank Address']));
+        wrap.appendChild(mkRow('Account Name', r['Entity Legal Name']));
+        wrap.appendChild(mkRow('Account Address', r['Account Address']));
+        wrap.appendChild(mkRow('Account Number', r['Account Number'], true));
+        wrap.appendChild(mkRow('Routing Number (WIRE)', r['Routing Number (WIRE)'], true));
+        wrap.appendChild(mkRow('Routing Number (ACH)', r['Routing Number (ACH)'], true));
+        wrap.appendChild(mkRow('SWIFT (international)', r['SWIFT (international)']));
+        wrap.appendChild(mkRow('Verbal confirmation - contact1', r['Verbal confirmation - contact1']));
+        wrap.appendChild(mkRow('Verbal confirmation - contact2', r['Verbal confirmation - contact2']));
+        card.appendChild(wrap);
+
+        host.appendChild(card);
       }
-    })();
-  </script>
+    }
+  }
+
+  function paintUser(user){
+    document.getElementById('signedAs').textContent = `Signed in as ${user?.email||''}`;
+    document.getElementById('kpi-name').textContent  = user?.name || '—';
+    document.getElementById('kpi-email').textContent = user?.email || '—';
+  }
+
+  async function loadAll(){
+    setStatus('Loading…');
+    const [{ funds, email, actingAs }, { wires }] = await Promise.all([ loadFundsWithInterest(), loadWireRows() ]);
+    const memberFunds = funds.map(f => f.fund || f.name || '');
+    document.getElementById('kpi-scope').textContent = memberFunds.length ? `${memberFunds.length} entit${memberFunds.length>1?'ies':'y'}` : '—';
+    document.getElementById('kpi-scope-sub').textContent = memberFunds.length ? 'Filtered by your GP Interests' : 'No active GP Interests found';
+    renderBankCards(wires || [], memberFunds);
+    if (actingAs && actingAs !== email){
+      document.getElementById('signedAs').textContent = `Acting as ${actingAs} (admin: ${email})`;
+    }
+    setStatus('');
+  }
+
+  async function bootWithSession(){
+    const r = await me();
+    if (r.ok){
+      const { user } = await r.json();
+      paintUser(user);
+      await loadAll();
+      return true;
+    }
+    return false;
+  }
+
+  // ==== start ====
+  (async function start(){
+    try{
+      if (await bootWithSession()) return;
+      await sleep(250);
+      if (await bootWithSession()) return;
+      setStatus('Session not ready');
+      initGis(); // render button + prompt
+    }catch(e){
+      console.error(e);
+      setStatus('Failed to load wire instructions');
+    }
+  })();
+</script>
 </body>
 </html>
+
