--- a/public/wire.html
+++ b/public/wire.html
@@ -11,6 +11,7 @@
   <meta property="og:image" content="https://portal.allegiscapital.com/og-card.png">
   <meta property="og:url" content="https://portal.allegiscapital.com/wire.html">
   <title>Wire Instructions • Allegis Portal</title>
+
   <style>
     :root { --navy:#1E2B45; --red:#E94B3C; --muted:#f5f7fb; --ink:#222; --border:#e8edf7; --sidebar:#ffffff; }
     * { box-sizing: border-box; }
@@ -27,6 +28,7 @@
     .title-row { display:flex; align-items:flex-start; gap:12px; margin-top:8px; }
     .title { font-size:28px; font-weight:700; color:var(--navy); }
     .sub { color:#666; font-size:12px; }
+
     .topbar { margin-left:auto; display:flex; align-items:center; gap:8px; position:relative; }
     #status { color:#b00; min-height:16px; }
 
@@ -36,7 +38,6 @@
 
     .grid { display:grid; grid-template-columns: 1fr 1fr; gap:12px; }
     .card { background:#fff; border-radius:14px; box-shadow:0 1px 6px rgba(0,0,0,.08); padding:16px; }
-    .card h3 { margin:0; font-size:16px; }
     .kpi { font-size:28px; font-weight:700; }
 
     .bank-grid { display:grid; grid-template-columns: 1fr 1fr; gap:12px; margin-top:12px; }
@@ -57,7 +58,7 @@
     }
   </style>
 
-  <!-- Google Identity Services loader -->
+  <!-- Google Identity Services -->
   <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 <body>
@@ -116,7 +117,7 @@
     const WEB_CLIENT_ID = '468716163323-st1b43fu76emqlj1cde6mmq770sbeno1.apps.googleusercontent.com';
 
     // ==== utils ====
-    const safe  = s => String(s ?? '').replace(/[&<>"]/g, c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;'}[c]));
+    const safe = s => String(s ?? '').replace(/[&<>"]/g, c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;'}[c]));
     const sleep = ms => new Promise(r=>setTimeout(r,ms));
     const norm  = s => String(s||'').toLowerCase().replace(/[^a-z0-9]/g,'');
     function setStatus(msg){ const el=document.getElementById('status'); if(el) el.textContent = msg || ''; }
@@ -126,209 +127,208 @@
     function adminHeaders(){ return window.__admin?.token ? { 'X-Admin-Token': window.__admin.token } : {}; }
     function adminBody(){ const o={}; if(window.__admin?.actAs){ o.actAs = window.__admin.actAs; if(window.__admin?.reason) o.reason = window.__admin.reason; } return o; }
 
-    // Basic fetch helpers
+    // Strict POST helper (cookies on)
     async function apiPost(path, body, extraHeaders){
       const headers = { 'Content-Type':'application/json', ...(extraHeaders||{}) };
       const r = await fetch(path, { method:'POST', headers, credentials:'include', cache:'no-store', body: JSON.stringify(body||{}) });
-      const txt = await r.text();
-      let j=null; try{ j = JSON.parse(txt); }catch{}
-      if(!r.ok || (j && j.error)){ const msg=(j&&(j.error||j.message))||txt||`HTTP ${r.status}`; throw new Error(msg.trim()); }
-      return j ?? { ok:true, raw:txt };
+      const text = await r.text();
+      let j=null; try{ j = JSON.parse(text); }catch{}
+      if(!r.ok || (j && j.error)){ const msg=(j&&(j.error||j.message))||text||`HTTP ${r.status}`; throw new Error(msg.trim()); }
+      return j ?? { ok:true, raw:text };
     }
     async function me(){ return fetch('/api/me', { credentials:'include', cache:'no-store' }); }
 
-  // ==== GIS (same as index.html: auto-select + prompt) ====
-  function initGis(){
-    if (!window.google || !google.accounts || !google.accounts.id){
-      setTimeout(initGis, 50);
-      return;
-    }
-    google.accounts.id.initialize({
-      client_id: WEB_CLIENT_ID,
-      callback: ({ credential }) => afterSignIn(credential),
-      auto_select: true,
-      use_fedcm_for_prompt: true,
-      cancel_on_tap_outside: false
-    });
-    const btnHost = document.getElementById('g_id_signin');
-    if (btnHost) google.accounts.id.renderButton(btnHost, { theme:'outline', size:'large' });
-    google.accounts.id.prompt(); // ← important
-  }
-
-  async function waitForSession(timeoutMs = 5000){
-    const start = Date.now();
-    while (Date.now() - start < timeoutMs){
-      const r = await me();                 // GET /api/me
-      if (r.ok){
-        try { return await r.json(); } catch { return { user:null }; }
+    // ==== GIS (same pattern as index.html) ====
+    function initGis(){
+      if(!window.google || !google.accounts || !google.accounts.id){
+        setTimeout(initGis, 50);
+        return;
       }
-      await sleep(150);
-    }
-    throw new Error('Session not ready');
-  }
-
-  async function afterSignIn(credential){
-    try{
-      // Create server session cookie
-      const r = await fetch('/api/session', {
-        method:'POST',
-        headers:{ 'content-type':'application/json' },
-        credentials:'include',
-        cache:'no-store',
-        body: JSON.stringify({ credential })
+      google.accounts.id.initialize({
+        client_id: WEB_CLIENT_ID,
+        callback: ({ credential }) => afterSignIn(credential),
+        auto_select: true,
+        use_fedcm_for_prompt: true,
+        cancel_on_tap_outside: false
       });
-      if (!r.ok) throw new Error('session create failed');
+      const btnHost = document.getElementById('g_id_signin');
+      if (btnHost) google.accounts.id.renderButton(btnHost, { theme:'outline', size:'large' });
+      google.accounts.id.prompt();
+    }
 
-      // Confirm cookie landed before loading data
-      const { user } = await waitForSession(5000);
-      if (user?.email){
-        document.getElementById('signedAs').textContent = `Signed in as ${user.email}`;
-        document.getElementById('kpi-name').textContent  = user.name || '—';
-        document.getElementById('kpi-email').textContent = user.email || '—';
+    async function waitForSession(timeoutMs = 5000){
+      const start = Date.now();
+      while (Date.now() - start < timeoutMs){
+        const r = await me();
+        if (r.ok){
+          try { return await r.json(); } catch { return { user:null }; }
+        }
+        await sleep(150);
       }
-      await loadAll();
-    }catch(e){
-      console.error(e);
-      setStatus('Sign-in failed. Please try again.');
-    }
-  }
-
-  // ==== data loaders ====
-  async function loadFundsWithInterest(){
-    const payload = await apiPost('/api/list-interests', { ...adminBody() }, adminHeaders());
-    const funds = (payload.funds||[]).filter(f => (typeof f.interestFrac==='number' ? f.interestFrac : 0) > 0);
-    return { funds, updated: payload.updated, email: payload.email, actingAs: payload.actingAs };
-  }
-  async function loadWireRows(){
-    const { wires, updated } = await apiPost('/api/list-wires', { ...adminBody() }, adminHeaders());
-    return { wires: Array.isArray(wires) ? wires : [], updated };
-  }
-
-  function masked(val, visible=false){
-    const s = String(val||'').replace(/\s/g,'').trim();
-    if (!s) return '';
-    if (visible) return String(val);
-    const last4 = s.slice(-4);
-    return '•'.repeat(Math.max(0, s.length - 4)) + last4;
-  }
-  function copyText(text){
-    navigator.clipboard?.writeText(String(text)).then(()=>{ setStatus('Copied'); setTimeout(()=>setStatus(''),1000); });
-  }
-  function mkRow(label, raw, sensitive=false){
-    const row = document.createElement('div'); row.className='rows';
-    const l = document.createElement('div'); l.className='label'; l.textContent = label;
-    const v = document.createElement('div'); v.className='value';
-    const btns = document.createElement('div'); btns.className='buttons';
-    let revealed = false;
-    const render = ()=> v.textContent = sensitive ? masked(raw, revealed) : (raw || '');
-    render();
-    if (raw && String(raw).trim()){
-      const copyBtn = document.createElement('button'); copyBtn.className='btn'; copyBtn.textContent='Copy';
-      copyBtn.addEventListener('click', ()=> copyText(raw)); btns.appendChild(copyBtn);
-      if (sensitive){
-        const tog = document.createElement('button'); tog.className='btn'; tog.textContent='Reveal';
-        tog.addEventListener('click', ()=>{ revealed = !revealed; tog.textContent = revealed ? 'Hide' : 'Reveal'; render(); });
-        btns.appendChild(tog);
-      }
-    } else {
-      v.innerHTML = '<span class="muted">—</span>';
-    }
-    row.appendChild(l); row.appendChild(v); row.appendChild(btns);
-    return row;
-  }
-
-  function renderBankCards(wires, memberFunds){
-    const host = document.getElementById('bankWrap'); host.innerHTML = '';
-    const byFund = new Map(); for (const f of memberFunds) byFund.set(norm(f), true);
-
-    const rows = wires.filter(r=>{
-      const shortName = norm(r['Entity Short Name'] || '');
-      const legalName = norm(r['Entity Legal Name'] || '');
-      return byFund.has(shortName) || byFund.has(legalName);
-    });
-
-    if (!rows.length){
-      const empty = document.createElement('div');
-      empty.className = 'card';
-      empty.innerHTML = '<div class="sub">No wire instructions are available for your current holdings.</div>';
-      host.appendChild(empty);
-      return;
+      throw new Error('Session not ready');
     }
 
-    const groups = new Map();
-    for (const r of rows){
-      const key = r['Entity Short Name'] || r['Entity Legal Name'] || 'Entity';
-      if (!groups.has(key)) groups.set(key, []);
-      groups.get(key).push(r);
-    }
+    async function afterSignIn(credential){
+      try{
+        const r = await fetch('/api/session', {
+          method:'POST',
+          headers:{'content-type':'application/json'},
+          credentials:'include',
+          cache:'no-store',
+          body: JSON.stringify({ credential })
+        });
+        if(!r.ok) throw new Error('session create failed');
 
-    for (const [entity, list] of groups){
-      for (const r of list){
-        const card = document.createElement('div'); card.className='bank-card';
-        card.innerHTML = `<h4>${safe(entity)}</h4>`;
-
-        const wrap = document.createElement('div'); wrap.className='rows';
-        wrap.appendChild(mkRow('Bank Name', r['Bank Name']));
-        wrap.appendChild(mkRow('Bank Address', r['Bank Address']));
-        wrap.appendChild(mkRow('Account Name', r['Entity Legal Name']));
-        wrap.appendChild(mkRow('Account Address', r['Account Address']));
-        wrap.appendChild(mkRow('Account Number', r['Account Number'], true));
-        wrap.appendChild(mkRow('Routing Number (WIRE)', r['Routing Number (WIRE)'], true));
-        wrap.appendChild(mkRow('Routing Number (ACH)', r['Routing Number (ACH)'], true));
-        wrap.appendChild(mkRow('SWIFT (international)', r['SWIFT (international)']));
-        wrap.appendChild(mkRow('Verbal confirmation - contact1', r['Verbal confirmation - contact1']));
-        wrap.appendChild(mkRow('Verbal confirmation - contact2', r['Verbal confirmation - contact2']));
-        card.appendChild(wrap);
-
-        host.appendChild(card);
+        // Try a few boots; if cookie visibility lags, hard-reload.
+        for (let i=0;i<6;i++){
+          if (await bootWithSession()) return;
+          await sleep(i < 2 ? 150 : 300);
+        }
+        location.reload();
+      }catch(e){
+        console.error(e);
+        setStatus('Sign-in failed. Please try again.');
       }
     }
-  }
 
-  function paintUser(user){
-    document.getElementById('signedAs').textContent = `Signed in as ${user?.email||''}`;
-    document.getElementById('kpi-name').textContent  = user?.name || '—';
-    document.getElementById('kpi-email').textContent = user?.email || '—';
-  }
-
-  async function loadAll(){
-    setStatus('Loading…');
-    const [{ funds, email, actingAs }, { wires }] = await Promise.all([ loadFundsWithInterest(), loadWireRows() ]);
-    const memberFunds = funds.map(f => f.fund || f.name || '');
-    document.getElementById('kpi-scope').textContent = memberFunds.length ? `${memberFunds.length} entit${memberFunds.length>1?'ies':'y'}` : '—';
-    document.getElementById('kpi-scope-sub').textContent = memberFunds.length ? 'Filtered by your GP Interests' : 'No active GP Interests found';
-    renderBankCards(wires || [], memberFunds);
-    if (actingAs && actingAs !== email){
-      document.getElementById('signedAs').textContent = `Acting as ${actingAs} (admin: ${email})`;
+    // ==== data ====
+    async function loadFundsWithInterest(){
+      const payload = await apiPost('/api/list-interests', { ...adminBody() }, adminHeaders());
+      const funds = (payload.funds||[]).filter(f => (typeof f.interestFrac==='number' ? f.interestFrac : 0) > 0);
+      return { funds, updated: payload.updated, email: payload.email, actingAs: payload.actingAs };
     }
-    setStatus('');
-  }
-
-  async function bootWithSession(){
-    const r = await me();
-    if (r.ok){
-      const { user } = await r.json();
-      paintUser(user);
-      await loadAll();
-      return true;
+    async function loadWireRows(){
+      const { wires, updated } = await apiPost('/api/list-wires', { ...adminBody() }, adminHeaders());
+      return { wires: Array.isArray(wires) ? wires : [], updated };
     }
-    return false;
-  }
 
-  // ==== start ====
-  (async function start(){
-    try{
-      if (await bootWithSession()) return;
-      await sleep(250);
-      if (await bootWithSession()) return;
-      setStatus('Session not ready');
-      initGis(); // render button + prompt
-    }catch(e){
-      console.error(e);
-      setStatus('Failed to load wire instructions');
+    // ==== masking/copy ====
+    function masked(val, visible=false){
+      const s = String(val||'').replace(/\s/g,'').trim();
+      if (!s) return '';
+      if (visible) return String(val);
+      const last4 = s.slice(-4);
+      return '•'.repeat(Math.max(0, s.length - 4)) + last4;
     }
-  })();
-</script>
+    function copyText(text){
+      navigator.clipboard?.writeText(String(text)).then(()=>{ setStatus('Copied'); setTimeout(()=>setStatus(''),1000); });
+    }
+    function mkRow(label, raw, sensitive=false){
+      const row = document.createElement('div'); row.className='rows';
+      const l = document.createElement('div'); l.className='label'; l.textContent = label;
+      const v = document.createElement('div'); v.className='value';
+      const btns = document.createElement('div'); btns.className='buttons';
+      let revealed = false;
+      const render = ()=> v.textContent = sensitive ? masked(raw, revealed) : (raw || '');
+      render();
+      if (raw && String(raw).trim()){
+        const copyBtn = document.createElement('button'); copyBtn.className='btn'; copyBtn.textContent='Copy';
+        copyBtn.addEventListener('click', ()=> copyText(raw)); btns.appendChild(copyBtn);
+        if (sensitive){
+          const tog = document.createElement('button'); tog.className='btn'; tog.textContent='Reveal';
+          tog.addEventListener('click', ()=>{ revealed = !revealed; tog.textContent = revealed ? 'Hide' : 'Reveal'; render(); });
+          btns.appendChild(tog);
+        }
+      } else {
+        v.innerHTML = '<span class="muted">—</span>';
+      }
+      row.appendChild(l); row.appendChild(v); row.appendChild(btns);
+      return row;
+    }
+
+    // ==== render ====
+    function renderBankCards(wires, memberFunds){
+      const host = document.getElementById('bankWrap'); host.innerHTML = '';
+      const byFund = new Map(); for (const f of memberFunds) byFund.set(norm(f), true);
+
+      // Prefer match on Entity Short Name, fallback to Legal Name
+      const rows = wires.filter(r=>{
+        const shortName = norm(r['Entity Short Name'] || '');
+        const legalName = norm(r['Entity Legal Name'] || '');
+        return byFund.has(shortName) || byFund.has(legalName);
+      });
+
+      if (!rows.length){
+        const empty = document.createElement('div');
+        empty.className = 'card';
+        empty.innerHTML = '<div class="sub">No wire instructions are available for your current holdings.</div>';
+        host.appendChild(empty);
+        return;
+      }
+
+      const groups = new Map();
+      for (const r of rows){
+        const key = r['Entity Short Name'] || r['Entity Legal Name'] || 'Entity';
+        if (!groups.has(key)) groups.set(key, []);
+        groups.get(key).push(r);
+      }
+
+      for (const [entity, list] of groups){
+        for (const r of list){
+          const card = document.createElement('div'); card.className='bank-card';
+          card.innerHTML = `<h4>${safe(entity)}</h4>`;
+
+          const wrap = document.createElement('div'); wrap.className='rows';
+          wrap.appendChild(mkRow('Bank Name', r['Bank Name']));
+          wrap.appendChild(mkRow('Bank Address', r['Bank Address']));
+          wrap.appendChild(mkRow('Account Name', r['Entity Legal Name']));
+          wrap.appendChild(mkRow('Account Address', r['Account Address']));
+          wrap.appendChild(mkRow('Account Number', r['Account Number'], true));
+          wrap.appendChild(mkRow('Routing Number (WIRE)', r['Routing Number (WIRE)'], true));
+          wrap.appendChild(mkRow('Routing Number (ACH)', r['Routing Number (ACH)'], true));
+          wrap.appendChild(mkRow('SWIFT (international)', r['SWIFT (international)']));
+          wrap.appendChild(mkRow('Verbal confirmation - contact1', r['Verbal confirmation - contact1']));
+          wrap.appendChild(mkRow('Verbal confirmation - contact2', r['Verbal confirmation - contact2']));
+          card.appendChild(wrap);
+
+          host.appendChild(card);
+        }
+      }
+    }
+
+    function paintUser(user){
+      document.getElementById('signedAs').textContent = `Signed in as ${user?.email||''}`;
+      document.getElementById('kpi-name').textContent  = user?.name || '—';
+      document.getElementById('kpi-email').textContent = user?.email || '—';
+    }
+
+    async function loadAll(){
+      setStatus('Loading…');
+      const [{ funds, email, actingAs }, { wires }] = await Promise.all([ loadFundsWithInterest(), loadWireRows() ]);
+      const memberFunds = funds.map(f => f.fund || f.name || '');
+      document.getElementById('kpi-scope').textContent = memberFunds.length ? `${memberFunds.length} entit${memberFunds.length>1?'ies':'y'}` : '—';
+      document.getElementById('kpi-scope-sub').textContent = memberFunds.length ? 'Filtered by your GP Interests' : 'No active GP Interests found';
+      renderBankCards(wires || [], memberFunds);
+      if (actingAs && actingAs !== email){
+        document.getElementById('signedAs').textContent = `Acting as ${actingAs} (admin: ${email})`;
+      }
+      setStatus('');
+    }
+
+    async function bootWithSession(){
+      const r = await me();
+      if (r.ok){
+        const { user } = await r.json();
+        paintUser(user);
+        await loadAll();
+        return true;
+      }
+      return false;
+    }
+
+    // ==== start ====
+    (async function start(){
+      try{
+        if (await bootWithSession()) return;
+        await sleep(250);
+        if (await bootWithSession()) return;
+        setStatus('Session not ready');
+        initGis(); // show Google button + prompt
+      }catch(e){
+        console.error(e);
+        setStatus('Failed to load wire instructions');
+      }
+    })();
+  </script>
 </body>
 </html>
-
