--- a/public/index.html
+++ b/public/index.html
@@ -81,48 +81,41 @@
       max-width: 760px;
     }
     .bank-card { background:#fff; border:1px solid var(--border); border-radius:14px; padding:16px; box-shadow:0 1px 6px rgba(0,0,0,.06); }
-    .bank-card h4 { margin:0 0 8px 0; font-size:15px; color:var(--navy); }
+    .bank-card h4{ margin:0 0 6px 0; }  
     
     /* Compact inline layout: "Field: Value" */
-    .rows-wrap{ display:grid; row-gap:6px; }
+    .rows-wrap{ display:grid; row-gap:2px; }
     .rows{
-      display:grid;
-      grid-template-columns: max-content 1fr;  /* label | value */
-      column-gap:8px;
-      row-gap:2px;
-      align-items:start;
-      margin-top:4px;
+      display:flex;
+      align-items:baseline;   /* keeps text baselines aligned */
+      gap:8px;                /* space between label, value, button */
+      margin:0;               /* no extra vertical margin per row */
     }
     
     .label{
-      white-space: nowrap;      /* keep label on one line */
-      font-size: 12px;
-      color: #666;
+      white-space:nowrap;
+      font-size:12px; color:#666;
     }
-    .label::after{
-      content: ":";             /* renders "Field:" automatically */
-      margin-left: 2px;
-    }
+    .label::after{ content: ":"; margin-left:2px; }
+
     .value{
+      flex:1 1 auto;          /* fill remaining line */
+      min-width:0;            /* allow wrapping */
       font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
-      font-size: 13px;
-      line-height: 1.4;
-      overflow-wrap: anywhere;  /* wrap long values (e.g., addresses) */
-      word-break: break-word;
+      font-size:13px; line-height:1.35;
+      overflow-wrap:anywhere;
+      word-break:break-word;
     }
     .buttons{
-      grid-column: 1 / -1;   /* buttons drop below, full width */
+      flex:0 0 auto;
       display:flex;
       gap:6px;
-      margin-top:4px;
+      margin:0;
     }
     .btn{
-      padding: 4px 8px;
-      font-size: 12px;
-      border: 1px solid #dde3f5;
-      background: #f5f7fb;
-      border-radius: 8px;
-      cursor: pointer;
+      padding:2px 6px;        /* smaller, tighter buttons */
+      font-size:11px;
+      border:1px solid #dde3f5; background:#f5f7fb; border-radius:8px; cursor:pointer;
     }
 
     .muted { color:#888; }
@@ -890,6 +883,7 @@
   </script>
 </body>
 </html>
+
 
 
 
